--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "symfony/lts": "^4@dev",
         "symfony/orm-pack": "^1.0",
         "symfony/twig-bundle": "^4.0",
-        "symfony/yaml": "^4.0"
+        "symfony/yaml": "^4.0",
+        "white-october/pagerfanta-bundle": "^1.2"
     },
     "require-dev": {
         "symfony/dotenv": "^4.0",
